Bug Fixed - Close request button not showing in floating action buttons

--- a/scss/core.scss
+++ b/scss/core.scss
@@ -165,3 +165,6 @@
   .btn-group-fab.active .btn-sub:nth-child(5) {
     bottom: 210px;
   }
+  .btn-group-fab.active .btn-sub:nth-child(6) {
+    bottom: 260px;
+  }
